<resources>
    <string name="app_name">Ace RFID</string>
    <string name="select">Select</string>
    <string name="picker">Picker</string>
    <string name="auto_read_on_tag_scan">Auto read on tag scan?</string>
    <string name="type">Type:</string>
    <string name="color">Color:</string>
    <string name="_00_00_00_00">00 00 00 00 00 00</string>
    <string name="tag_id">Tag ID:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="pick_color">Pick Color</string>
    <string name="tag_found">"TAG Found: "</string>
    <string name="this_device_does_not_support_mifare_ultralight_tags">This device does not support \"Mifare Ultralight\" tags</string>
    <string name="please_activate_nfc">Please activate NFC</string>
    <string name="data_written_to_tag">Data written to TAG</string>
    <string name="error_writing_to_tag">Error writing to TAG</string>
    <string name="invalid_tag_type">Invalid tag type</string>
    <string name="error_reading_tag">Error reading TAG</string>
    <string name="data_read_from_tag">Data read from TAG</string>
    <string name="unknown_or_empty_tag">Unknown or empty TAG</string>
    <string name="size">Size:</string>
    <string name="info_temps">Extruder Temp: %d min | %d max\nBed Temp: %d min | %d max</string>
    <string name="hex_color_code">HEX Color Code</string>
    <string name="no_nfc_tag_found">No NFC tag found</string>
    <string name="close">Close</string>
    <string name="add_filament">Add Filament</string>
    <string name="alphanumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="numeric">0123456789</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="edit_filament">Edit Filament</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_filament">Delete Filament?</string>
    <string name="edit">Edit</string>
    <string name="serialdesc">e.g. Basic, Matte, Silk, Marble</string>
    <string name="help">Help</string>
    <string name="extruder_min">Extruder Min:</string>
    <string name="extruder_max">Extruder Max:</string>
    <string name="serial">Serial:</string>
    <string name="vendor">Vendor:</string>
    <string name="bed_min">Bed Min:</string>
    <string name="bed_max">Bed Max:</string>
    <string name="helpurl">https://github.com/DnG-Crafts/ACE-RFID/blob/main/docs/Filament/Filament.md</string>
    <string name="can_t_find_vendor_i_want">Can\'t find vendor I want</string>
</resources>