<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxWidth="500dp"
    android:layout_gravity="center|fill_vertical"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/material"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dialog"
        app:backgroundTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblmaterial"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/materialborder"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/lblmaterial"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblmaterial"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        android:text="@string/type"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spoolsize"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dialog"
        app:backgroundTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblsize"
        app:layout_constraintTop_toBottomOf="@+id/material" />

    <View
        android:id="@+id/sizeborder"
        android:background="@drawable/border"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblsize"
        app:layout_constraintTop_toBottomOf="@+id/material"
        />

    <TextView
        android:id="@+id/lblsize"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/size"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toStartOf="@+id/spoolsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblmaterial" />

    <Spinner
        android:id="@+id/colorspin"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:spinnerMode="dialog"
        app:backgroundTint="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblcolor"
        app:layout_constraintTop_toBottomOf="@+id/spoolsize" />

    <View
        android:id="@+id/colorborder"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toEndOf="@+id/lblcolor"
        app:layout_constraintTop_toBottomOf="@+id/spoolsize" />

    <View
        android:id="@+id/colorview"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:background="#0000FF"
        app:layout_constraintStart_toStartOf="@+id/colorborder"
        app:layout_constraintTop_toTopOf="@+id/colorborder" />

    <TextView
        android:id="@+id/lblcolor"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="54dp"
        android:text="@string/color"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/colorspin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblsize" />

    <TextView
        android:id="@+id/tagid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/_00_00_00_00"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/lbltagid"
        app:layout_constraintTop_toBottomOf="@+id/autoread" />

    <TextView
        android:id="@+id/lbltagid"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tag_id"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tagid"
        app:layout_constraintStart_toStartOf="@+id/autoread"
        app:layout_constraintTop_toBottomOf="@+id/autoread" />

    <Button
        android:id="@+id/readbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="90dp"
        android:padding="14dp"
        android:text="@string/read"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/writebutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbltagid" />

    <Button
        android:id="@+id/writebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="100dp"
        android:padding="14dp"
        android:text="@string/write"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/readbutton"
        app:layout_constraintTop_toBottomOf="@+id/tagid" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/autoread"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/auto_read_on_tag_scan"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/colorspin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lblcolor"
        app:layout_constraintTop_toBottomOf="@+id/infotext" />

    <TextView
        android:id="@+id/infotext"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:padding="10dp"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/colorspin"
        app:layout_constraintStart_toStartOf="@+id/lblcolor"
        app:layout_constraintTop_toBottomOf="@+id/colorspin" />

    <ImageView
        android:id="@+id/addbutton"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="-6dp"
        android:contentDescription="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/material"
        app:layout_constraintBottom_toTopOf="@+id/material"
        app:srcCompat="@drawable/twotone_add_24"
        app:tint="#1976D2" />

    <ImageView
        android:id="@+id/editbutton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/edit"
        app:layout_constraintEnd_toStartOf="@+id/addbutton"
        app:layout_constraintBottom_toTopOf="@+id/material"
        app:srcCompat="@drawable/twotone_edit_24"
        app:tint="#1976D2" />

    <ImageView
        android:id="@+id/deletebutton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/delete"
        app:srcCompat="@drawable/twotone_delete_24"
        app:tint="#1976D2"
        app:layout_constraintEnd_toStartOf="@+id/editbutton"
        app:layout_constraintBottom_toTopOf="@+id/material" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>