<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1D1D1"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/eframe"
    android:maxWidth="500dp"
    android:layout_gravity="center|fill_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D1D1D1"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/picker"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/picker"
        app:layout_constraintBottom_toTopOf="@+id/seekbar_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/eframe"
        app:srcCompat="@drawable/palette" />

    <SeekBar
        android:id="@+id/seekbar_font"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        android:progressDrawable="@drawable/seekbar_drawable"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker" />

    <View
        android:id="@+id/dcolorview"
        android:layout_width="142dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btncls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcolor"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/btncls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:padding="14dp"
        android:text="@string/select"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dcolorview"
        app:layout_constraintTop_toTopOf="@+id/dcolorview" />

    <EditText
        android:id="@+id/txtcolor"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/edittext"
        android:digits="0123456789ABCDEF"
        android:ems="6"
        android:focusable="true"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:focusableInTouchMode="true"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="6"
        android:padding="10dp"
        android:text=""
        android:textColor="@color/text_color"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/dcolorview"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/dcolorview"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_font" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:text="@string/hex_color_code"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtcolor"
        app:layout_constraintEnd_toEndOf="@+id/txtcolor"
        app:layout_constraintStart_toStartOf="@+id/txtcolor" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>